@@ -1,5 +1,12 @@
 2020-05-07  Tim Rühsen  <tim.ruehsen@gmx.de>
 
+	* libpoke/ios-dev-mem.c (ios_dev_mem_open): Replace
+	xzalloc by calloc.
+	(ios_dev_mem_pwrite): Replace xrealloc with realloc.
+	Remove include xalloc.h.
+
+2020-05-07  Tim Rühsen  <tim.ruehsen@gmx.de>
+
 	* libpoke/ios-dev-nbd.c (ios_dev_nbd_open): Replace
 	xmalloc and xstrdup by malloc and strdup.
 	Remove include xalloc.h.
